# uavros

libmavconn/include/mavconn/: interface.h  serial.h  tcp.h  udp.h  udpmulticast.h
libmavconn/src/: interface.cpp  serial.cpp  tcp.cpp  udp.cpp  udpmulticast.cpp
mavlink/: .gitmodules
mavlink/message_definitions/v1.0/: ASLUAV.xml  README.md  all.xml  ardupilotmega.xml  common.xml  matrixpilot.xml  paparazzi.xml  standard.xml
mavros_msgs/: CMakeLists.txt
mavros_msgs/msg/: CommandCode.msg  Sensors_Health.msg  State.msg  UAT_AprilTag.msg  UAT_Battery.msg  UAT_Distsensor.msg  UAT_Gpos.msg  UAT_HangerStatus.msg  UAT_HighFreqGimbalTarget.msg  UAT_Lpos.msg  UAT_Mav2ros.msg  UAT_MqttAuthenStatus.msg  UAT_MsgCode.msg  UAT_OffboardState.msg  UAT_Opticflow.msg  UAT_Ros2mavlink.msg  UAT_rosmsg.msg  Uat_CameraState.msg  Uat_CommonStatus.msg  Uat_DiagnosticStatus.msg  Uat_FlightInformation.msg  Uat_GimbalState.msg  Uat_NetlinkState.msg  Uat_PeripheralVersion.msg  Uat_RecognizeState.msg  Uat_SysStatus.msg
mavros_msgs/srv/: UAT_AuthenCtl.srv  UAT_CommonCtl.srv  UAT_HangarCtl.srv  UAT_MountCtl.srv  UAT_UpgradeCMD.srv  UAT_rossrv.srv  Uat_GimbalTarget.srv
mqtt_client/: README.md
mqtt_client/mqtt_client/config/: params.yaml
mqtt_client/mqtt_client/launch/: standalone.launch
mqtt_client/mqtt_client/src/: MqttClient.cpp
uat_cloud_identify/: CMakeLists.txt  README.md  package.xml
uat_cloud_identify/launch/: custom_rosconsole.conf  identify.launch
uat_cloud_identify/src/app/: CloudExchangeNx.cpp  CloudExchangeNx.hpp  mqttros_node.cpp
uat_cloud_identify/src/data/: DataExchange.hpp
uat_cloud_identify/src/drivers/: driver_data_code.hpp  mongoose.c  mongoose.h  mqtt_warehouse_code.hpp  ros_file_operate.cpp  ros_file_operate.hpp
uat_cloud_vechile/: CMakeLists.txt  cloud_vehicle_plugins.xml  package.xml
uat_cloud_vechile/include/uat_cloud_vechile/: cloud_vehicle_base_plugin.h
uat_cloud_vechile/launch/: uat_cloud_vechile.launch
uat_cloud_vechile/src/: uat_cloud_vechile_node.cpp
uat_cloud_vechile/src/plugins/: command.cpp  control_law.cpp  discrete.cpp  drivetrain.cpp  engine550.cpp  fms.cpp  guidance_law.cpp  mianins.cpp  osd.cpp  osd_reply.cpp  power.cpp  remote_control.cpp  status.cpp  waypoint_load.cpp
uat_flycontrol_analyse/: CMakeLists.txt  package.xml  uavros_plugins.xml
uat_flycontrol_analyse/include/: uat_command_package.h  uat_flycontrol_analyse.h  uavros_plugin.h
uat_flycontrol_analyse/src/: uat_command_package.cpp  uat_flycontrol_analyse.cpp  uat_flycontrol_analyse_node.cpp
uat_log_cloud/: CMakeLists.txt  package.xml
uat_log_cloud/include/: CurlUploader.h  uat_log_cloud.h
uat_log_cloud/launch/: uat_log_cloud.launch
uat_log_cloud/src/: CurlUploader.cpp  uat_log_cloud.cpp  uat_log_cloud_node.cpp
uat_msg/: CMakeLists.txt  package.xml
uat_msg/msg/: TD550FirstsubFourframe.msg  TD550FirstsubTwoframe.msg  TD550SecondsubOneframe.msg  TD550ThirdsubFourframe.msg  TD550ThirdsubOneframe.msg  TD550ThirdsubThreeframe.msg
uat_msg/srv/: TD550CommandSwitch.srv  TD550OsdReply.srv  TD550RemoteAdjustValue.srv  TD550WPQuery.srv  TD550WRLoad.srv
uav_subscriber/: CMakeLists.txt  package.xml
uav_subscriber/src/: osd_subscriber.cpp
uavros/: CMakeLists.txt  package.xml
uavros/include/: saveDataToFile.h  uavros.h
uavros/launch/: uavros.launch
uavros/src/: saveDataToFile.cpp  uavros.cpp  uavros_node.cpp
(+23 files in other folders)
